@@ -1,5 +1,5 @@
 1.2b6
-- Printimng improvements :
+- Printing improvements :
     - Better G clef on printed scores
     - Added F clef render on printed scores
     - Added dotted silence rendering
@@ -7,6 +7,7 @@
     - Fixed crash when printing a single track
     - Key signature now appears on printed scores
     - Marked repetition detection as experimental, disabled by default
+    - Fixed printing of notes above/below score (previously broken)
 
 1.2b5
 - More minor linux fixes
